# test_repo

./: CMakeLists.txt  Makefile  cmake_install.cmake  train.prototxt
key_point_detector/: model.py  train.py  utils.py
scripts/: audio_gan.py  create_list.py  create_video.py  extract_audio.py  extract_frame.py  gen_audio_from_feat.py  get_guass_map.py  mask.py  prepare_fcn_caffe_list.py  prepare_gan_data.py  prepare_label_data.py  visualize.py  visualize_audio_video.py
scripts/c3d_refined_sound/: model.py  train.py  utils.py
src/: A.csv  CMakeLists.txt  Makefile  affine.cpp  channels.cpp  channels.h  cmake_install.cmake  general_tracker_pyramid.cpp  general_tracker_pyramid.h  homography.cpp  input.cpp  input.h  models.h  pretranslation_tracker_pyramid.cpp  pretranslation_tracker_pyramid.h  pretranslationpyr_tracker_pyramid.cpp  pretranslationpyr_tracker_pyramid.h  simple_tracker_pyramid.cpp  simple_tracker_pyramid.h  test.cpp  tracker.cpp  tracker.h  translation.cpp  types.h  utils.cpp  utils.h  violin_tracker.cpp
