list(APPEND dependecies  tracker.cpp channels.cpp input.cpp utils.cpp)
list(APPEND dependecies  affine.cpp translation.cpp homography.cpp)
list(APPEND dependecies  general_tracker_pyramid.cpp)
list(APPEND dependecies  simple_tracker_pyramid.cpp)
list(APPEND dependecies  pretranslation_tracker_pyramid.cpp)
list(APPEND dependecies  pretranslationpyr_tracker_pyramid.cpp)
add_executable(violin_tracker violin_tracker.cpp ${dependecies})
target_compile_options(violin_tracker PUBLIC -O2)
target_link_libraries( violin_tracker ${Eigen_LIBS} )
target_link_libraries( violin_tracker ${OpenCV_LIBS} )
target_link_libraries( violin_tracker ${Boost_LIBRARIES} )

add_executable(violin_tracker_valgrind violin_tracker.cpp ${dependecies})
target_compile_options(violin_tracker_valgrind PUBLIC -g)
target_link_libraries( violin_tracker_valgrind ${Eigen_LIBS} )
target_link_libraries( violin_tracker_valgrind ${OpenCV_LIBS} )
target_link_libraries( violin_tracker_valgrind ${Boost_LIBRARIES} )
